# hs-poc

./: .pre-commit-config.yaml  Music.hs
GradientDescent-hs/: LICENSE  README.md  gradientdescent.cabal
GradientDescent-hs/app/: Main.hs
GradientDescent-hs/src/: GradientDescent.hs  ReadCSV.hs
HSG/: README.md
HSG/AssociatedTypeFamilies/: Main.hs
HSG/CustomErrors/: Ex.hs
HSG/Defunctionalization/: Ex.hs
HSG/DependentTypes/: DependentPairs.hs  Machinery.hs  SBool.hs  Stack.hs
HSG/ExistentialTypes/: ExistetialsEliminators.hs
HSG/FreeMonads/: Concurrency.hs  Free.hs  Interpreter.hs
HSG/Generics/: Generics.hs  JSONSchema.hs
HSG/IndexedMonads/: Ix.hs  LinearAlloc.hs
HSG/OpenProducts/: Ex.hs
HSG/OpenSums/: Main.hs
HSG/UnboxedTypes/: Main.hs
Neopolitan/: ChangeLog.md  LICENSE  Neopolitan.cabal  README.md  package.yaml
Neopolitan/.github/workflows/: build-test.yml
Neopolitan/app/: Main.hs
Neopolitan/src/: Neo.hs
Neopolitan/src/Neo/: Config.hs  Slack.hs
Neopolitan/test/: Spec.hs
as-test-ygo/: README.md  as-test-ygo.cabal  package.yaml  time-wizard.json
as-test-ygo/app/: Main.hs
pa-comer/: .gitignore  CHANGELOG.md  devenv.nix  pa-comer.cabal
pa-comer/app/: Main.hs  Models.hs
pa-comer/db/: create-db.sql
pa-comer/templates/: main.mustache  meal.mustache  root.mustache
taggy/: CHANGELOG.md  LICENSE  README.md  my-taggy.cabal
taggy/app/: Main.hs
