name: gradientdescent
version: 0.1.0.0
synopsis: Gradient Descent
description: Gradient Descent
homepage: https://github.com/CristhianMotoche/gradientdescent#readme
license: BSD3
license-file: LICENSE
author: CristhianMotoche
maintainer: cristhian.motoche@gmail.com
copyright: 2017 Cristhian Motoche
category: Development
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Lib,
    GradientDescent,
    ReadCSV
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable gradientdescent-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gradientdescent
  default-language:    Haskell2010

test-suite gradientdescent-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gradientdescent
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/CristhianMotoche/gradientdescent
