cabal-version:      3.4
name:               my-taggy
version:            0.1.0.0
synopsis:           Testing htaglib to tag my songs
license:            MIT
license-file:       LICENSE
author:             CristhianMotoche
maintainer:         cristhian.motoche@gmail.com
category:           POC
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable my-taggy
    import:           warnings

    main-is:          Main.hs

    build-depends:    base ^>=4.17.1.0,
                      htaglib ^>= 1.2.0

    hs-source-dirs:   app

    default-language: Haskell2010
